--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -9,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Jack img.jpg" alt="Jacks profile picture"  width="200"
+      <td><img src="Images/Jack img.jpg" alt="Jacks profile picture"  width="200"
          height="300" /></td>
       <td><h1> Jack Coleman </h1>
       <p><em>Boss of <strong><a href="https://codepen.io/_MylesC/pen/KKZZGgZ">Boss</a>The World</strong>.</em></p>
